[gd_scene load_steps=2 format=3]

[ext_resource path="res://ui/NewModule.gd" type="Script" id=1]

[node name="NewModule" type="Control" script=ExtResource(1)]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NameLabel" type="Label" parent="VBoxContainer"]
text = "Module Name"

[node name="NameEdit" type="LineEdit" parent="VBoxContainer"]

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
text = "Description"

[node name="DescriptionEdit" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)

[node name="TagsLabel" type="Label" parent="VBoxContainer"]
text = "Tags (comma separated)"

[node name="TagsEdit" type="LineEdit" parent="VBoxContainer"]

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
text = "Status"

[node name="StatusDropdown" type="OptionButton" parent="VBoxContainer"]

[node name="CreateButton" type="Button" parent="VBoxContainer"]
text = "Create"

[node name="BackButton" type="Button" parent="VBoxContainer"]
text = "Back"
